홈화면 및 게시글 작성 화면, 기능 추가